uuid route completed. TIP

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,7 @@
 		<script src="/bower_components/socket.io-client/socket.io.js"></script>
 		<script src="/bower_components/angular-socket-io/socket.js"></script>
 		<script src="/js/factory/factories.js"></script>
-
-
+		<script src="angular-uuid.js" ></script>
 	</head>
 
 	<body ng-app="starkC" ng-controller='mainController'>
