--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
 				<button type="button" class='btn btn-primary'ng-click='getRandomGif()'>Give me</button>
 				<div>
 					<img ng-src="{{img}}" alt="" />
+					<img ng-src="{{otherImg}}"  style="height:{{height}}px; width:{{width}}px"/>
 				</div>
 
 			</div>
