--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
 
 			<div ng-controller='thingController'>
 				<button type="button" class='btn btn-primary'ng-click='getRandomGif()'>Give me</button>
+				<button type="button" class='btn btn-primary'ng-click='upload(img)'>Post to Matt's Twitter</button>
 				<div>
 					<img ng-src="{{img}}" alt="" />
 				</div>
