download and upload linked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,9 +40,7 @@
 			<div ng-controller='thingController'>
 				<button type="button" class='btn btn-primary'ng-click='getRandomGif()'>Give me</button>
 
-				<button type="button" class='btn btn-primary'ng-click='upload(img)'>Post to Matt's Twitter</button>
-
-				<button type="button" class='btn btn-primary' ng-click='download(img)'>Download gif to /file.gif</button>
+				<button type="button" class='btn btn-primary' ng-click='download(img)'>Download gotten gif to /file.gif and upload to Matt's twitter</button>
 
 
 
