--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/css/style.css" media="all">
 
 		<script src="/bower_components/angular/angular.js"></script>
+		<script src="/bower_components/angular-animate/angular-animate.js" charset="utf-8"></script>
 		<script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
 		<script src="/css/assets/jquery.min.js"></script>
@@ -28,7 +29,11 @@
 		<script src="/bower_components/socket.io-client/socket.io.js"></script>
 		<script src="/bower_components/angular-socket-io/socket.js"></script>
 		<script src="/js/factory/factories.js"></script>
-		<script src="angular-uuid.js" ></script>
+
+		<!-- TOASTR -->
+		<link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
+		<script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+
 	</head>
 
 	<body ng-app="starkC" ng-controller='mainController'>
