vote and hashtag submissions working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 		<script src="/js/module.js"></script>
 		<script src="/js/mainController.js"></script>
 		<script src="/js/userController.js"></script>
-		<script src="/js/thingController.js"></script>
+		<script src="/js/hashtagController.js"></script>
 		<script src="/js/userService.js"></script>
 		<script src="/js/thingService.js"></script>
 
@@ -45,7 +45,7 @@
 			</div>
 
 			<div class="btn-group navigation">
-				<label class="btn btn-primary" ui-sref="thing" ng-model="thing" uib-btn-radio="'thing'">Thing</label>
+				<label class="btn btn-primary" ui-sref="hashtag" ng-model="thing" uib-btn-radio="'thing'">Thing</label>
 			</div>
 
 
