--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,9 @@
 					<img ng-src="{{otherImg}}"  ng-click='showImage()' style="height:{{height}}px; width:{{width}}px"/>
 				</div>
 
+				<div>
+					{{counter}}
+				</div>
 			</div>
 
 
