--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 .buttons-cell {
-	text-align:right;	
+	text-align:right;
 }
 
 .table-container {
@@ -8,4 +8,8 @@
 
 td {
 	vertical-align:middle!important;
+}
+
+.counter h1 {
+	font-size: 200px;
 }
