--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,8 +44,9 @@
 					<img ng-src="{{otherImg}}"  ng-click='showImage()' style="height:{{height}}px; width:{{width}}px"/>
 				</div>
 
-				<div>
-					{{counter}}
+				<div class='counter'>
+					<h1>{{counter2}}</h1>
+					<h1>{{counter}}</h1>
 				</div>
 			</div>
 
