added 2nd timer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,8 @@
 				</div>
 
 				<div class='counter'>
-					<h1>{{counter2}}</h1>
-					<h1>{{counter}}</h1>
+					<h1>Time Left: {{counter2}}</h1>
+					<h2>Submission Time Left: {{counter}}</h1>
 				</div>
 			</div>
 
